2006-04-12 Mikhail Khodjaiants
	Write log messages to the system out instead of err.
	* MIPlugin.java

2006-04-12 Mikhail Khodjaiants
	Bug 136206: Suppress Resumed events when processing solib events.
	* EventManager.java
	* RxThread.java
	* Command.java
	* MIEvent.java

2006-04-12 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	Support for deferred breakpoints.
	* BreakpointManager.java
	* EventManager.java
	* SharedLibraryManager.java
	* Target.java
	* GDBCDIDebugger.java
	* GDBCDIDebugger2.java
	* GDBDebugger.java

2006-04-10 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	* SharedLibraryManager.java
	* GDBCDIDebugger2.java
	* IMILaunchConfigurationConstants.java
	* MICoreUtils.java

2006-04-10 Mikhail Khodjaiants
	"set solib-search-path" and "show solib-search-path" are not supported on Windows.
	* StandardWinCommandFactory.java

2006-04-03 Mikhail Khodjaiants
	Bug 134617: The "stop on shared library event" option doesn't work.
	* GDBCDIDebugger2.java

2006-03-31 Mikhail Khodjaiants
	Corrected position of the "try-catch-finally" clause in createSession.
	* AbstractGDBCDIDebugger.java

2006-03-31 Mikhail Khodjaiants
	Throw OperationCanceledException instead of IOException when getGDBprocess is canceled.
	* MIProcessAdapter.java

2006-03-27 Mikhail Khodjaiants
	Cleaned up the "Session" class constructors.
	* Session.java
 
2006-03-27 Mikhail Khodjaiants
	Added the "getSessionConfiguration" method to allow clients to provide their own session configurations.
	* AbstractGDBCDIDebugger.java

2006-03-23 Mikhail Khodjaiants
	Pass ILaunch instead of ILaunchConfiguration.
	Added "getGDBPath" method.
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
	* GDBServerCDIDebugger2.java

2006-03-23 Mikhail Khodjaiants
	Added default attribute value for ATTR_DEBUG_NAME.